# OOP-Gaming-Assignment

./: BoardGame_Classes.hpp  CMakeLists.txt  README.md
5x5 tic tac toe/: BoardGame_Classes.hpp  GameManager.cpp  Player.cpp  RandomPlayer.cpp  X_O_App.cpp  X_O_Board.cpp
5x5 tic tac toe/5x5 tic tac toe/: XO5_Board.cpp
C4/C4 From Doc/: C4_Board.cpp  C4_GameManager.cpp  C4_HDeclarations.h  C4_Main.cpp  C4_Player.cpp  C4_RandomPlayer.cpp
C4/C4 From Scratch/: C4.h  C4App.cpp  C4Board.cpp  C4GameManager.cpp
Four in a Row/: C4_AI.cpp  C4_App.cpp  C4_Board.cpp  C4_Classes.hpp  C4_GameManager.cpp  C4_Player.cpp  C4_RandomPlayer.cpp
Four in a row/: BoardGame_Classes.hpp  C4_App.cpp  C4_Board.cpp  C4_Player.cpp  C4_RandomPlayer.cpp  GameManager.cpp  Player.cpp  RandomPlayer.cpp
Pyramid_XO/: AI_player.cpp  AI_player.h  BoardGame_Classes.hpp  CMakeLists.txt  Main_game.cpp  Pyramid_Board.cpp  Pyramid_Board.h  RandomPlayer.cpp  new_Game.cpp  new_Game.h  new_player.cpp  new_player.h  new_random.cpp  new_random.h
TASK3-20220450-20220032-20220456/: C4_Board.cpp  C4_GameManager.cpp  C4_Player.cpp  C4_RandomPlayer.cpp  Classes_Header.h  Main_App.cpp  Pyramid_Board.cpp  Pyramid_GameManager.cpp  Pyramid_Player.cpp  Pyramid_RandomPlayer.cpp  XO5_GameManager.cpp  XO5_Player.cpp  XO5_RandomPlayer.cpp
